# pyiohat

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_docs.yml  pypi_cd.yml  tox_ci.yml
docs/: index.rst  requirements.txt
example_scripts/: unify_msamanda.py  unify_msfragger.py
pyiohat/: __init__.py  unify.py
pyiohat/parsers/: base_parser.py  ident_base_parser.py  misc.py  quant_base_parser.py
pyiohat/parsers/ident/: comet_2020_01_4_parser.py  dummy_parser.py  mascot_2_6_2_parser.py  msamanda_2_parser.py  msfragger_3_parser.py  msgfplus_2021_03_22_parser.py  omssa_2_1_9_parser.py  xtandem_alanine.py
pyiohat/parsers/models/: base_parser_model.json  ident_parser_model.json  quant_parser_model.json
pyiohat/parsers/quant/: flash_lfq_1_2_0_parser.py  tmt_quant_parser_1_0_0.py
pyprotista/: __init__.py  unify.py  version.txt
pyprotista/engine_parsers/ident/: comet_2020_01_4_parser.py  dummy_parser.py  ident_base_parser.py  mascot_2_6_2_parser.py  msamanda_2_parser.py  msfragger_3_parser.py  msgfplus_2021_03_22_parser.py  omssa_2_1_9_parser.py  xtandem_alanine.py
pyprotista/engine_parsers/quant/: flash_lfq_1_2_0_parser.py  quant_base_parser.py
pyprotista/parsers/: base_parser.py  ident_base_parser.py  misc.py  quant_base_parser.py
pyprotista/parsers/ident/: comet_2020_01_4_parser.py  dummy_parser.py  mascot_2_6_2_parser.py  msamanda_2_parser.py  msfragger_3_parser.py  msgfplus_2021_03_22_parser.py  omssa_2_1_9_parser.py  xtandem_alanine.py
pyprotista/parsers/models/: ident_parser_model.json  quant_parser_model.json
pyprotista/parsers/quant/: flash_lfq_1_2_0_parser.py
tests/: test_engine_parser_base_parser.py  test_engine_parser_ident_base_parser.py  test_engine_parser_quant_base_parser.py  test_unify.py
tests/data/: BSA1_comet_2020_01_4.mzid  BSA1_msgfplus_2021_03_22.mzid  BSA1_open_search.msfragger.tsv  BSA1_ursgal_lookup.csv  BSA1_ursgal_lookup_no_precursor_mz.csv  BSA2_ursgal_lookup.csv  TMT16_ursgal_lookup.csv  _ursgal_lookup.csv  flash_lfq_1_2_0_quantified_peaks.tsv  test_positions_msfragger.tsv
tests/data/mapping_data/: trunc_meta.spectra_meta.csv  trunc_tmt_quant.csv
tests/ident/: test_engine_parser_comet_2020_01_04.py  test_engine_parser_mascot_2_6_2.py  test_engine_parser_msamanda.py  test_engine_parser_msfragger_3.py  test_engine_parser_msgfplus_2021_03_22.py  test_engine_parser_omssa.py  test_engine_parser_xtandem_alanine.py
tests/mapping/: test_TMTpro_mapping.py
tests/parsers/misc/: test_get_atom_counts.py
tests/quant/: test_engine_parser_flash_lfq_1_2_0.py  test_tmt_quant_1_0_0.py
