[metadata]
name = pyiohat
description = Python Mass Spectrometry Input Output Harmonization Tool
long_description = Unify formats of bottom-up proteomics search and quant engines
author = Tristan Ranff, Manuel Kösters, Artyom Vlasov, Christian Fufezan
author_email = christian@fufezan.net
url = https://github.com/computational-ms/pyiohat
license = MIT
classifier = 
     Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Education
     Intended Audience :: Science/Research
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
     Operating System :: POSIX :: SunOS/Solaris
     Operating System :: Unix
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering :: Bio-Informatics
     Topic :: Scientific/Engineering :: Chemistry
     Topic :: Scientific/Engineering :: Medical Science Apps.


[options]
packages = find:
install_requires =
    unimod-mapper~=0.6.8
    peptide-mapper~=0.4.3
    chemical-composition~=1.0.6
    pyahocorasick>=1.4.4,<2.1.0
    pandas>=1.4.3,<2.2.0
    numpy>=1.22.0
    loguru>=0.6,<0.8
    tqdm>=4.64,<4.66
    regex>=2022.7.25,<2023.9.0
    uparma>=0.9.15,<1.1.0
    IsoSpecPy~=2.2.0


[options.package_data]
* = *.txt

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme

[egg_info]
egg_base = .
